Change user register
